k8s/media-services/slskd/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd
  namespace: media-services
  annotations:
    gethomepage.dev/href: "https://slskd.clusterlab.cc"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Soulseek P2P file sharing client"
    gethomepage.dev/group: Download Clients
    gethomepage.dev/icon: https://icons.clusterlab.cc/slskd
    gethomepage.dev/name: Slskd
    gethomepage.dev/pod-selector: "app=slskd"
    
    gethomepage.dev/widget.type: "slskd"
    gethomepage.dev/widget.url: "http://slskd"
    gethomepage.dev/widget.key: "ddbfbc053f4e00a306ac11c4de9fb0a0"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`slskd.clusterlab.cc`)
      kind: Rule
      services:
        - name: slskd
          port: http
  tls:
    secretName: slskd-clusterlab-cc-tls
